[gd_scene load_steps=87 format=2]

[ext_resource path="res://brick1.tres" type="TileSet" id=1]
[ext_resource path="res://Janek.gd" type="Script" id=2]
[ext_resource path="res://Individual Sprites/adventurer-run-00.png" type="Texture" id=3]
[ext_resource path="res://Individual Sprites/adventurer-run-01.png" type="Texture" id=4]
[ext_resource path="res://Individual Sprites/adventurer-run-02.png" type="Texture" id=5]
[ext_resource path="res://Individual Sprites/adventurer-run-03.png" type="Texture" id=6]
[ext_resource path="res://Individual Sprites/adventurer-run-04.png" type="Texture" id=7]
[ext_resource path="res://Individual Sprites/adventurer-run-05.png" type="Texture" id=8]
[ext_resource path="res://Individual Sprites/adventurer-idle-2-00.png" type="Texture" id=9]
[ext_resource path="res://Individual Sprites/adventurer-idle-2-01.png" type="Texture" id=10]
[ext_resource path="res://Individual Sprites/adventurer-idle-2-02.png" type="Texture" id=11]
[ext_resource path="res://Individual Sprites/adventurer-idle-2-03.png" type="Texture" id=12]
[ext_resource path="res://Individual Sprites/adventurer-idle-00.png" type="Texture" id=13]
[ext_resource path="res://Individual Sprites/adventurer-idle-01.png" type="Texture" id=14]
[ext_resource path="res://Individual Sprites/adventurer-idle-02.png" type="Texture" id=15]
[ext_resource path="res://Individual Sprites/adventurer-idle-03.png" type="Texture" id=16]
[ext_resource path="res://Individual Sprites/adventurer-attack2-00.png" type="Texture" id=17]
[ext_resource path="res://Individual Sprites/adventurer-attack2-01.png" type="Texture" id=18]
[ext_resource path="res://Individual Sprites/adventurer-attack2-02.png" type="Texture" id=19]
[ext_resource path="res://Individual Sprites/adventurer-attack2-03.png" type="Texture" id=20]
[ext_resource path="res://Individual Sprites/adventurer-attack2-04.png" type="Texture" id=21]
[ext_resource path="res://Individual Sprites/adventurer-attack2-05.png" type="Texture" id=22]
[ext_resource path="res://Individual Sprites/adventurer-attack1-00.png" type="Texture" id=23]
[ext_resource path="res://Individual Sprites/adventurer-attack1-01.png" type="Texture" id=24]
[ext_resource path="res://Individual Sprites/adventurer-attack1-02.png" type="Texture" id=25]
[ext_resource path="res://Individual Sprites/adventurer-attack1-03.png" type="Texture" id=26]
[ext_resource path="res://Individual Sprites/adventurer-attack1-04.png" type="Texture" id=27]
[ext_resource path="res://Individual Sprites/adventurer-attack3-00.png" type="Texture" id=28]
[ext_resource path="res://Individual Sprites/adventurer-attack3-01.png" type="Texture" id=29]
[ext_resource path="res://Individual Sprites/adventurer-attack3-02.png" type="Texture" id=30]
[ext_resource path="res://Individual Sprites/adventurer-attack3-03.png" type="Texture" id=31]
[ext_resource path="res://Individual Sprites/adventurer-attack3-04.png" type="Texture" id=32]
[ext_resource path="res://Individual Sprites/adventurer-attack3-05.png" type="Texture" id=33]
[ext_resource path="res://Individual Sprites/run3/adventurer-run3-00.png" type="Texture" id=34]
[ext_resource path="res://Individual Sprites/run3/adventurer-run3-01.png" type="Texture" id=35]
[ext_resource path="res://Individual Sprites/run3/adventurer-run3-02.png" type="Texture" id=36]
[ext_resource path="res://Individual Sprites/run3/adventurer-run3-03.png" type="Texture" id=37]
[ext_resource path="res://Individual Sprites/run3/adventurer-run3-04.png" type="Texture" id=38]
[ext_resource path="res://Individual Sprites/run3/adventurer-run3-05.png" type="Texture" id=39]
[ext_resource path="res://Individual Sprites/adventurer-jump-00.png" type="Texture" id=40]
[ext_resource path="res://Individual Sprites/adventurer-jump-01.png" type="Texture" id=41]
[ext_resource path="res://Individual Sprites/adventurer-jump-02.png" type="Texture" id=42]
[ext_resource path="res://Individual Sprites/adventurer-jump-03.png" type="Texture" id=43]
[ext_resource path="res://Individual Sprites/adventurer-die-00.png" type="Texture" id=44]
[ext_resource path="res://Individual Sprites/adventurer-die-01.png" type="Texture" id=45]
[ext_resource path="res://Individual Sprites/adventurer-die-02.png" type="Texture" id=46]
[ext_resource path="res://Individual Sprites/adventurer-die-03.png" type="Texture" id=47]
[ext_resource path="res://Individual Sprites/adventurer-die-04.png" type="Texture" id=48]
[ext_resource path="res://Individual Sprites/adventurer-die-05.png" type="Texture" id=49]
[ext_resource path="res://Individual Sprites/adventurer-die-06.png" type="Texture" id=50]
[ext_resource path="res://Individual Sprites/adventurer-stand-02.png" type="Texture" id=51]
[ext_resource path="res://Individual Sprites/adventurer-stand-01.png" type="Texture" id=52]
[ext_resource path="res://Individual Sprites/adventurer-stand-00.png" type="Texture" id=53]
[ext_resource path="res://Individual Sprites/adventurer-slide-00.png" type="Texture" id=54]
[ext_resource path="res://Individual Sprites/adventurer-slide-01.png" type="Texture" id=55]
[ext_resource path="res://items/heart.png" type="Texture" id=56]
[ext_resource path="res://icon.png" type="Texture" id=57]
[ext_resource path="res://Zombie.gd" type="Script" id=58]
[ext_resource path="res://Slime/Individual Sprites/slime-idle-0.png" type="Texture" id=59]
[ext_resource path="res://Slime/Individual Sprites/slime-idle-1.png" type="Texture" id=60]
[ext_resource path="res://Slime/Individual Sprites/slime-idle-2.png" type="Texture" id=61]
[ext_resource path="res://Slime/Individual Sprites/slime-idle-3.png" type="Texture" id=62]
[ext_resource path="res://Slime/Individual Sprites/slime-hurt-0.png" type="Texture" id=63]
[ext_resource path="res://Slime/Individual Sprites/slime-hurt-1.png" type="Texture" id=64]
[ext_resource path="res://Slime/Individual Sprites/slime-hurt-2.png" type="Texture" id=65]
[ext_resource path="res://Slime/Individual Sprites/slime-hurt-3.png" type="Texture" id=66]
[ext_resource path="res://Slime/Individual Sprites/slime-attack-0.png" type="Texture" id=67]
[ext_resource path="res://Slime/Individual Sprites/slime-attack-1.png" type="Texture" id=68]
[ext_resource path="res://Slime/Individual Sprites/slime-attack-2.png" type="Texture" id=69]
[ext_resource path="res://Slime/Individual Sprites/slime-attack-3.png" type="Texture" id=70]
[ext_resource path="res://Slime/Individual Sprites/slime-attack-4.png" type="Texture" id=71]
[ext_resource path="res://Slime/Individual Sprites/slime-die-0.png" type="Texture" id=72]
[ext_resource path="res://Slime/Individual Sprites/slime-die-1.png" type="Texture" id=73]
[ext_resource path="res://Slime/Individual Sprites/slime-die-2.png" type="Texture" id=74]
[ext_resource path="res://Slime/Individual Sprites/slime-die-3.png" type="Texture" id=75]
[ext_resource path="res://Slime/Individual Sprites/slime-move-0.png" type="Texture" id=76]
[ext_resource path="res://Slime/Individual Sprites/slime-move-1.png" type="Texture" id=77]
[ext_resource path="res://Slime/Individual Sprites/slime-move-2.png" type="Texture" id=78]
[ext_resource path="res://Slime/Individual Sprites/slime-move-3.png" type="Texture" id=79]

[sub_resource type="RectangleShape2D" id=1]

custom_solver_bias = 0.0
extents = Vector2( 10, 10 )

[sub_resource type="RectangleShape2D" id=2]

custom_solver_bias = 0.0
extents = Vector2( 10, 10 )

[sub_resource type="SpriteFrames" id=3]

animations = [ {
"frames": [ ExtResource( 3 ), ExtResource( 4 ), ExtResource( 5 ), ExtResource( 6 ), ExtResource( 7 ), ExtResource( 8 ) ],
"loop": true,
"name": "Run",
"speed": 8.0
}, {
"frames": [ ExtResource( 9 ), ExtResource( 10 ), ExtResource( 11 ), ExtResource( 12 ) ],
"loop": true,
"name": "Idle-Sword",
"speed": 4.0
}, {
"frames": [ ExtResource( 13 ), ExtResource( 14 ), ExtResource( 15 ), ExtResource( 16 ) ],
"loop": true,
"name": "Idle-NoSword",
"speed": 4.0
}, {
"frames": [ ExtResource( 17 ), ExtResource( 18 ), ExtResource( 19 ), ExtResource( 20 ), ExtResource( 21 ), ExtResource( 22 ) ],
"loop": true,
"name": "Attack2",
"speed": 10.0
}, {
"frames": [ ExtResource( 23 ), ExtResource( 24 ), ExtResource( 25 ), ExtResource( 26 ), ExtResource( 27 ) ],
"loop": true,
"name": "Attack1",
"speed": 10.0
}, {
"frames": [ ExtResource( 28 ), ExtResource( 29 ), ExtResource( 30 ), ExtResource( 31 ), ExtResource( 32 ), ExtResource( 33 ) ],
"loop": true,
"name": "Attack3",
"speed": 10.0
}, {
"frames": [ ExtResource( 34 ), ExtResource( 35 ), ExtResource( 36 ), ExtResource( 37 ), ExtResource( 38 ), ExtResource( 39 ) ],
"loop": true,
"name": "Run-Sword",
"speed": 8.0
}, {
"frames": [ ExtResource( 40 ), ExtResource( 41 ), ExtResource( 42 ), ExtResource( 43 ), ExtResource( 42 ), ExtResource( 41 ), ExtResource( 40 ) ],
"loop": false,
"name": "Jump",
"speed": 5.0
}, {
"frames": [ ExtResource( 44 ), ExtResource( 45 ), ExtResource( 46 ), ExtResource( 47 ), ExtResource( 48 ), ExtResource( 49 ), ExtResource( 50 ) ],
"loop": true,
"name": "Die",
"speed": 5.0
}, {
"frames": [ ExtResource( 51 ), ExtResource( 52 ), ExtResource( 53 ), ExtResource( 54 ), ExtResource( 55 ), ExtResource( 53 ), ExtResource( 52 ), ExtResource( 51 ) ],
"loop": true,
"name": "Slide",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=4]

custom_solver_bias = 0.0
extents = Vector2( 11.211, 9.04247 )

[sub_resource type="SpriteFrames" id=5]

animations = [ {
"frames": [ ExtResource( 59 ), ExtResource( 60 ), ExtResource( 61 ), ExtResource( 62 ) ],
"loop": true,
"name": "Idle",
"speed": 5.0
}, {
"frames": [ ExtResource( 63 ), ExtResource( 64 ), ExtResource( 65 ), ExtResource( 66 ) ],
"loop": true,
"name": "Hurt",
"speed": 5.0
}, {
"frames": [ ExtResource( 67 ), ExtResource( 68 ), ExtResource( 69 ), ExtResource( 70 ), ExtResource( 71 ) ],
"loop": true,
"name": "Attack",
"speed": 5.0
}, {
"frames": [ ExtResource( 72 ), ExtResource( 73 ), ExtResource( 74 ), ExtResource( 75 ) ],
"loop": true,
"name": "Die",
"speed": 5.0
}, {
"frames": [ ExtResource( 76 ), ExtResource( 77 ), ExtResource( 78 ), ExtResource( 79 ) ],
"loop": true,
"name": "Walk",
"speed": 5.0
} ]

[sub_resource type="TileSet" id=6]


[sub_resource type="RectangleShape2D" id=7]

custom_solver_bias = 0.0
extents = Vector2( 78.9275, 10 )

[node name="World2" type="Node" index="0"]

[node name="TileMap" type="TileMap" parent="." index="0"]

mode = 0
tile_set = ExtResource( 1 )
cell_size = Vector2( 64, 64 )
cell_quadrant_size = 16
cell_custom_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
cell_half_offset = 2
cell_tile_origin = 0
cell_y_sort = false
cell_clip_uv = false
collision_use_kinematic = false
collision_friction = 1.0
collision_bounce = 0.0
collision_layer = 1
collision_mask = 1
occluder_light_mask = 1
format = 1
tile_data = PoolIntArray( -65537, 16, 0, -1, 16, 0, 65535, 16, 0, 131071, 16, 0, 196607, 16, 0, 262143, 16, 0, 327679, 16, 0, 393215, 16, 0, 393216, 0, 0, 393217, 0, 0, 393218, 0, 0, 393219, 0, 0, 393220, 0, 0, 393221, 0, 0, 393222, 0, 0, 393227, 0, 0, 393228, 0, 0, 393229, 0, 0, 458759, 0, 0, 458760, 0, 0, 458761, 0, 0, 458762, 0, 0 )

[node name="StaticBody2D" type="StaticBody2D" parent="." index="1"]

editor/display_folded = true
input_pickable = false
collision_layer = 1
collision_mask = 1
constant_linear_velocity = Vector2( 0, 0 )
constant_angular_velocity = 0.0
friction = 1.0
bounce = 0.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D" index="0"]

position = Vector2( -32, 122.751 )
scale = Vector2( 3.07692, 26.7692 )
shape = SubResource( 1 )

[node name="StaticBody2D2" type="StaticBody2D" parent="." index="2"]

editor/display_folded = true
position = Vector2( 252, 420 )
input_pickable = false
collision_layer = 1
collision_mask = 1
constant_linear_velocity = Vector2( 0, 0 )
constant_angular_velocity = 0.0
friction = 1.0
bounce = 0.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D2" index="0"]

position = Vector2( -11, -5.24925 )
scale = Vector2( 23.7692, 3.07693 )
shape = SubResource( 2 )

[node name="StaticBody2D3" type="StaticBody2D" parent="." index="3"]

editor/display_folded = true
position = Vector2( 252, 420 )
input_pickable = false
collision_layer = 1
collision_mask = 1
constant_linear_velocity = Vector2( 0, 0 )
constant_angular_velocity = 0.0
friction = 1.0
bounce = 0.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D3" index="0"]

position = Vector2( 344.392, 58.7507 )
scale = Vector2( 12.4615, 3.07693 )
shape = SubResource( 2 )

[node name="StaticBody2D4" type="StaticBody2D" parent="." index="4"]

editor/display_folded = true
position = Vector2( 484, 356 )
input_pickable = false
collision_layer = 1
collision_mask = 1
constant_linear_velocity = Vector2( 0, 0 )
constant_angular_velocity = 0.0
friction = 1.0
bounce = 0.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D4" index="0"]

position = Vector2( 334.392, 58.7507 )
scale = Vector2( 11.2308, 3.07693 )
shape = SubResource( 2 )

[node name="Janek" type="KinematicBody2D" parent="." index="5" groups=[
"character",
]]

position = Vector2( 392.591, 304.851 )
input_pickable = false
collision_layer = 1
collision_mask = 1
collision/safe_margin = 0.08
script = ExtResource( 2 )
weapon_scene_path = "res://weapons/Weapon.tscn"
max_health = 4

[node name="Sprite" type="AnimatedSprite" parent="Janek" index="0"]

scale = Vector2( 2.68, 2.68 )
frames = SubResource( 3 )
animation = "Idle-NoSword"
_sections_unfolded = [ "Transform" ]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Janek" index="1"]

position = Vector2( 0, 10 )
scale = Vector2( 2.66457, 4.29827 )
shape = SubResource( 4 )
_sections_unfolded = [ "Transform" ]

[node name="Position2D" type="Position2D" parent="Janek" index="2"]

visible = false
scale = Vector2( 2.63413, -3.86758 )
_sections_unfolded = [ "Transform" ]

[node name="Camera2D" type="Camera2D" parent="Janek" index="3"]

anchor_mode = 1
rotating = false
current = true
zoom = Vector2( 1, 1 )
limit_left = -2147483647
limit_top = -2147483647
limit_right = 2147483647
limit_bottom = 2147483647
limit_smoothed = true
drag_margin_h_enabled = true
drag_margin_v_enabled = true
smoothing_enabled = true
smoothing_speed = 5.0
offset_v = 0.0
offset_h = 0.0
drag_margin_left = 0.2
drag_margin_top = 0.2
drag_margin_right = 0.2
drag_margin_bottom = 0.2
editor_draw_screen = true
editor_draw_limits = false
editor_draw_drag_margin = true
_sections_unfolded = [ "Drag Margin", "Editor", "Limit", "Transform" ]

[node name="WeaponSpawnPoint" type="Node2D" parent="Janek" index="4"]

position = Vector2( -3.05176e-005, 3.05176e-005 )
_sections_unfolded = [ "Transform", "Z Index" ]

[node name="WeaponAnchorPoint" type="Node2D" parent="Janek/WeaponSpawnPoint" index="0"]

position = Vector2( 35, 15 )
scale = Vector2( 0.5, 1 )
_sections_unfolded = [ "Transform", "Z Index" ]

[node name="Timer" type="Timer" parent="Janek" index="5"]

process_mode = 1
wait_time = 1.0
one_shot = true
autostart = false

[node name="Timer2" type="Timer" parent="Janek" index="6"]

process_mode = 1
wait_time = 4.0
one_shot = true
autostart = false

[node name="Timer3" type="Timer" parent="Janek" index="7"]

process_mode = 1
wait_time = 0.2
one_shot = true
autostart = false

[node name="UI" type="Node" parent="." index="6"]

editor/display_folded = true

[node name="UI" type="CanvasLayer" parent="UI" index="0"]

editor/display_folded = true
layer = 1
offset = Vector2( 0, 0 )
rotation = 0.0
scale = Vector2( 1, 1 )
transform = Transform2D( 1, 0, 0, 1, 0, 0 )

[node name="Health" type="Control" parent="UI/UI" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = -4.0
margin_top = -10.0
margin_right = 36.0
margin_bottom = 30.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1

[node name="Health0" type="NinePatchRect" parent="UI/UI/Health" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 20.0
margin_top = 20.0
margin_right = 90.0
margin_bottom = 80.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
texture = ExtResource( 56 )

[node name="Health1" type="NinePatchRect" parent="UI/UI/Health" index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 110.0
margin_top = 20.0
margin_right = 180.0
margin_bottom = 80.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
texture = ExtResource( 56 )

[node name="Health2" type="NinePatchRect" parent="UI/UI/Health" index="2"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 200.0
margin_top = 20.0
margin_right = 270.0
margin_bottom = 80.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
texture = ExtResource( 56 )

[node name="Health3" type="NinePatchRect" parent="UI/UI/Health" index="3"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 290.0
margin_top = 20.0
margin_right = 360.0
margin_bottom = 80.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
texture = ExtResource( 56 )

[node name="Control" type="Control" parent="UI/UI" index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 58.0
margin_top = -13.0
margin_right = 98.0
margin_bottom = 27.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1

[node name="Coin" type="NinePatchRect" parent="UI/UI/Control" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 740.0
margin_top = 20.0
margin_right = 800.0
margin_bottom = 80.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
texture = ExtResource( 57 )

[node name="RichTextLabel" type="RichTextLabel" parent="UI/UI/Control" index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 809.0
margin_top = 22.0
margin_right = 829.0
margin_bottom = 42.0
rect_min_size = Vector2( 5, 5 )
rect_scale = Vector2( 4, 4 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = true
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
bbcode_enabled = false
bbcode_text = ""
visible_characters = -1
percent_visible = 1.0
meta_underlined = true
tab_size = 4
text = "0"
scroll_active = true
scroll_following = false
selection_enabled = false
override_selected_font_color = false
_sections_unfolded = [ "Focus", "Rect", "custom_fonts" ]

[node name="Zombie" type="KinematicBody2D" parent="." index="7" groups=[
"character",
]]

position = Vector2( 599.522, 377.298 )
input_pickable = false
collision_layer = 1
collision_mask = 1
collision/safe_margin = 0.08
script = ExtResource( 58 )
weapon_scene_path = "res://weapons/Weapon.tscn"
max_health = 4

[node name="Sprite" type="AnimatedSprite" parent="Zombie" index="0"]

scale = Vector2( 1.78188, 1.78188 )
frames = SubResource( 5 )
animation = "Walk"
_sections_unfolded = [ "Transform" ]

[node name="TileMap2" type="TileMap" parent="Zombie/Sprite" index="0"]

editor/display_folded = true
position = Vector2( -71.5677, -13.872 )
scale = Vector2( 0.561205, 0.561205 )
mode = 0
tile_set = SubResource( 6 )
cell_size = Vector2( 16, 16 )
cell_quadrant_size = 16
cell_custom_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
cell_half_offset = 2
cell_tile_origin = 0
cell_y_sort = false
cell_clip_uv = false
collision_use_kinematic = false
collision_friction = 1.0
collision_bounce = 0.0
collision_layer = 1
collision_mask = 1
occluder_light_mask = 1
format = 1
tile_data = PoolIntArray(  )
_sections_unfolded = [ "Cell" ]

[node name="heart" type="TextureRect" parent="Zombie/Sprite/TileMap2" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 95.0
margin_top = -10.0
margin_right = 125.0
margin_bottom = 18.0
rect_scale = Vector2( 0.5, 0.5 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
texture = ExtResource( 56 )
stretch_mode = 0
_sections_unfolded = [ "Rect" ]

[node name="heart2" type="TextureRect" parent="Zombie/Sprite/TileMap2" index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 115.0
margin_top = -10.0
margin_right = 145.0
margin_bottom = 18.0
rect_scale = Vector2( 0.5, 0.5 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
texture = ExtResource( 56 )
stretch_mode = 0
_sections_unfolded = [ "Rect" ]

[node name="heart3" type="TextureRect" parent="Zombie/Sprite/TileMap2" index="2"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 135.0
margin_top = -10.0
margin_right = 165.0
margin_bottom = 18.0
rect_scale = Vector2( 0.5, 0.5 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
texture = ExtResource( 56 )
stretch_mode = 0
_sections_unfolded = [ "Rect" ]

[node name="heart4" type="TextureRect" parent="Zombie/Sprite/TileMap2" index="3"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 155.0
margin_top = -10.0
margin_right = 185.0
margin_bottom = 18.0
rect_scale = Vector2( 0.5, 0.5 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
texture = ExtResource( 56 )
stretch_mode = 0
_sections_unfolded = [ "Rect" ]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Zombie" index="1"]

position = Vector2( 0, -10.0613 )
scale = Vector2( 0.361029, 2.98314 )
shape = SubResource( 7 )
_sections_unfolded = [ "Transform" ]

[node name="WeaponSpawnPoint" type="Node2D" parent="Zombie" index="2"]

_sections_unfolded = [ "Transform", "Z Index" ]

[node name="WeaponAnchorPoint" type="Node2D" parent="Zombie/WeaponSpawnPoint" index="0"]

position = Vector2( 25, 0 )
_sections_unfolded = [ "Transform", "Z Index" ]

[node name="RayCast2D" type="RayCast2D" parent="Zombie" index="3"]

visible = false
scale = Vector2( 1, 0.935261 )
enabled = true
exclude_parent = true
cast_to = Vector2( 0, 50 )
collision_mask = 1
_sections_unfolded = [ "Transform" ]

[node name="Timer" type="Timer" parent="Zombie" index="4"]

process_mode = 1
wait_time = 2.0
one_shot = true
autostart = false

[node name="Timer2" type="Timer" parent="Zombie" index="5"]

process_mode = 1
wait_time = 1.0
one_shot = true
autostart = false

[connection signal="timeout" from="Janek/Timer" to="Janek" method="_on_Timer_timeout"]

[connection signal="timeout" from="Janek/Timer2" to="Janek" method="_on_Timer2_timeout"]

[connection signal="timeout" from="Janek/Timer3" to="Janek" method="_on_Timer3_timeout"]

[connection signal="timeout" from="Zombie/Timer" to="Zombie" method="_on_Timer_timeout"]

[connection signal="timeout" from="Zombie/Timer2" to="Zombie" method="_on_Timer2_timeout"]


